--- a/datri_lombardi_maiello.Rmd
+++ b/datri_lombardi_maiello.Rmd
@@ -235,12 +235,14 @@ ggplot(scree_plot, aes(x = PC, y = Eigenvalue)) +
     theme_minimal()
 ```
 
-Nel grafico il gomito sembra collocarsi intorno alla terza componente. Sulla base dei dati ottenuti si sceglie di mantenere un numero di componenti principali pari a 3.  
-Di seguito viene costruito il nuovo dataset in cui le variabili sono sostituite con le prime 3 PCA, che verrà usato più avanti nelle analisi.
+Nel grafico il gomito sembra collocarsi sulla seconda componente.
+
+Andando per maggioranza, sulla base dei dati ottenuti, si sceglie di mantenere un numero di componenti principali pari a 2.
+Di seguito viene costruito il nuovo dataset in cui le variabili sono sostituite con le prime 2 componenti principali, che verrà usato più avanti nelle analisi.
 
 ```{r}
-pca_data <- as.data.frame(pca_result$ind$coord[, 1:3])
-colnames(pca_data) <- c("PCA1", "PCA2", "PCA3")
+pca_data <- as.data.frame(pca_result$ind$coord[, 1:2])
+colnames(pca_data) <- c("PCA1", "PCA2")
 banknote_pca <- cbind(pca_data, Status = banknote$Status)
 banknote_pca <- banknote_pca %>% dplyr::select(Status, everything())
 head(banknote_pca)
@@ -512,22 +514,14 @@ best_overall_pca <- results_ranked_pca %>% arrange(total_rank) %>% head(1)
 print(best_overall_pca)
 ```
 
-Applicando il clustering agglomerativo con metodo "average" su 3 componenti principali (PCA) e 2 cluster, si ottiene la combinazione migliore secondo la maggior parte degli indici di valutazione, con silhouette e VI al primo posto, ma un indice Dunn debole.
+Applicando il clustering agglomerativo con metodo "centroid" su 2 componenti principali (PCA) e 4 cluster, si ottiene la combinazione migliore, con Corrected Rand Index e VI ai primi posti, ma le metriche interne indicano una struttura non molto netta (basso Dunn e silhouette moderata).
 Rispetto al clustering su tutte le variabili, la soluzione con PCA ha una silhouette leggermente migliore, ma risulta inferiore negli altri indici (Dunn, Corrected Rand, VI), suggerendo che la riduzione dimensionale migliora la coesione interna, ma non necessariamente la separazione o l'aderenza alla struttura reale.
 
-Vediamo graficamente come sono separati i due cluster.
-```{r hierarchical agglomerative clustering pca eclust}
-final_pca <- eclust(banknote_pca_num, "hclust", k = 2, hc_metric = "euclidean", hc_method = "average", graph = FALSE)
+Vediamo graficamente come vengono separati i due cluster con la configurazione trovata.
+```{r}
+final_pca <- eclust(banknote_pca_num, "hclust", k = 4, hc_metric = "euclidean", hc_method = "centroid", graph = FALSE)
 
-clusters <- final_pca$cluster
-
-scatterplot3d(banknote_pca_num,
-              color = clusters,
-              pch = 19,
-              main = "Clustering su PCA (PC1, PC2, PC3)",
-              xlab = "PC1", ylab = "PC2", zlab = "PC3")
-
-legend("topright", legend = unique(clusters), col = unique(clusters), pch = 19, title = "Cluster")
+fviz_cluster(final_pca, geom = "point", ellipse.type = "norm", palette="jco", ggtheme = theme_minimal())
 
 ```
 
@@ -718,7 +712,7 @@ Procediamo a calcolare l'ultimo indice.
 clust_stats$vi
 ```
 
-Anche qui il valore indica una somiglianza molto elevata tra la partizione ottenuta dal clustering e quella di riferimento..
+Anche qui il valore indica una somiglianza molto elevata tra la partizione ottenuta dal clustering e quella di riferimento.
 
 ### 4.1.3 Dataset trasformato
 
@@ -758,36 +752,38 @@ Anche in questo caso il numero di cluster ottimale è pari a 2.
 ```{r}
 final_pca <- eclust(df_pca, "kmeans", k = 2, nstart = 25, graph = FALSE)
 
-clusters <- final_pca$cluster
-
-scatterplot3d(df_pca,
-              color = clusters,
-              pch = 19,
-              main = "Clustering su PCA (PC1, PC2, PC3)",
-              xlab = "PC1", ylab = "PC2", zlab = "PC3")
-
-legend("topright", legend = unique(clusters), col = unique(clusters), pch = 19, title = "Cluster")
+fviz_cluster(final_pca, geom = "point", ellipse.type = "convex", palette="jco", ggtheme = theme_minimal())
 ```
 
 #### 4.1.3.2. Validazione
 
-Procediamo, anche nel caso del dataset ridotto, a valutare la qualità del clustering k-means calcolando gli indici il **silhouette score**, il **Dunn index**, il **Corrected Rand Index** e il **Meila’s VI index**.
+Procediamo, anche nel caso del dataset con le variabili ricavate tramite mediante la PCA, a valutare la qualità del clustering k-means calcolando gli indici il **silhouette score**, il **Dunn index**, il **Corrected Rand Index** e il **Meila’s VI index**.
 
 ```{r}
 fviz_silhouette(final_pca, palette = "jco",
                 ggtheme = theme_classic())
 ```
+Un average silhouette index di 0.53 indica una qualità di clustering discreta,il clustering mostra una separazione relativamente buona tra i cluster.
+
 ```{r}
 km_stats <- cluster.stats(distanze, km.res$cluster)
 km_stats$dunn                           
 ```
+
+Un Dunn index pari a 0.1427453 suggerisce che la qualità del clustering non è particolarmente elevata.
+Continuiamo con il calcolo dell Corrected Rand Index.
+
 ```{r}
 clust_stats <- cluster.stats(distanze, status, km.res$cluster)
 clust_stats$corrected.rand
 ```
+Essendo molto vicino a 1, suggerisce che quasi tutte le coppie di osservazioni sono state correttamente assegnate allo stesso cluster o a cluster diversi in entrambe le partizioni.
+
 ```{r}
 clust_stats$vi
 ```
+
+Anche qui il valore indica una somiglianza molto elevata tra la partizione ottenuta dal clustering e quella di riferimento.
 
 ## 4.2 K-Medoids 
 
@@ -957,37 +953,40 @@ fviz_nbclust(df_pca, pam, nstart = 25, method = "gap_stat", nboot = 50)+
 ```{r}
 final_pca <- eclust(df_pca, "pam", k = 2, nstart = 25, graph = FALSE)
 
-clusters <- final_pca$cluster
-
-scatterplot3d(df_pca,
-              color = clusters,
-              pch = 19,
-              main = "Clustering su PCA (PC1, PC2, PC3)",
-              xlab = "PC1", ylab = "PC2", zlab = "PC3")
-
-legend("topright", legend = unique(clusters), col = unique(clusters), pch = 19, title = "Cluster")
+fviz_cluster(final_pca, geom = "point", ellipse.type = "convex", palette="jco", ggtheme = theme_minimal())
 ```
  
 #### 4.2.3.2. Validazione
-Commento
+
+Procediamo, anche nel caso del dataset con le variabili ricavate tramite mediante la PCA, a valutare la qualità del clustering k-means calcolando gli indici il **silhouette score**, il **Dunn index**, il **Corrected Rand Index** e il **Meila’s VI index**.
+
 ```{r}
 fviz_silhouette(final_pca, palette = "jco",
                 ggtheme = theme_classic())
 ```
+
+Un average silhouette index di 0.53 indica una qualità di clustering discreta,il clustering mostra una separazione relativamente buona tra i cluster.
 
 ```{r}
 pam_stats <- cluster.stats(distanze, pam.res$cluster)
 pam_stats$dunn                           
 ```
 
+Un Dunn index pari a 0.1427453 suggerisce che la qualità del clustering non è particolarmente elevata.
+Continuiamo con il calcolo dell Corrected Rand Index.
+
 ```{r}
 clust_stats <- cluster.stats(distanze, status, pam.res$cluster)
 clust_stats$corrected.rand
 ```
 
+Essendo molto vicino a 1, suggerisce che quasi tutte le coppie di osservazioni sono state correttamente assegnate allo stesso cluster o a cluster diversi in entrambe le partizioni.
+
 ```{r}
 clust_stats$vi
 ```
+
+Anche qui il valore indica una somiglianza molto elevata tra la partizione ottenuta dal clustering e quella di riferimento.
 
 # 5. Clustering Model-based: Mixture of Gaussian
 
@@ -1329,8 +1328,7 @@ Questa configurazione semplifica il modello senza perdere accuratezza, dimostran
 Nel seguente codice, applichiamo i diversi algoritmi di clustering al dataset trasformato (con le variabili trasformate mediante tecnica PCA) con i migliori parametri calcolati in precedenza (fissando il numero di cluster a 2) e aggiungiamo al dataframe le colonne corrispondenti alle assegnazioni di ciascun metodo.
 
 ```{r}
-data <- banknote_pca[, -1]
-data_scaled <- scale(data)
+data_scaled <- banknote_pca[, -1]
 
 set.seed(123)
 km_model <- kmeans(data_scaled, centers = 2, nstart = 25)
